--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="title_plan">Plan</string>
+    <string name="title_report">Report</string>
+    <string name="title_list">List</string>
+
+    <string name="list_fragment_label">List Fragment</string>
+    <string name="report_fragment_label">Report Fragment</string>
+    <string name="plan_fragment_label">Plan Fragment</string>
+
 </resources>
